# ckb-next

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILD.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  DAEMON.md  FIRMWARE  FIRMWARE.unsigned  FIRMWARE8  MACRO-DELAY.md  Makefile  README.md  ROADMAP.md  Supported_Hardware.md  VERSION  VERSION.cmake  ckb-dev-detect  ckb-next-dev-detect  ckb-next.plist  ckb.pro  migmac.sh  qmake-auto  quickinstall  tree.out
src/: CMakeLists.txt  ckbnextconfig.h.in  next.ckb.plist.in
src/animations/: CMakeLists.txt
src/animations/gradient/: CMakeLists.txt  main.c
src/animations/heat/: CMakeLists.txt  main.c
src/animations/invaders/: main.c
src/animations/libckbnextanim/: CMakeLists.txt
src/animations/libckbnextanim/cmake/: AnimationConfig.cmake
src/animations/life/: main.c
src/animations/mviz/: CMakeLists.txt  main.c
src/animations/mviz/kissfft/: CMakeLists.txt  _kiss_fft_guts.h  kiss_fft.c  kiss_fftr.c
src/animations/pinwheel/: CMakeLists.txt  main.c
src/animations/pipe/: main.c
src/animations/rain/: CMakeLists.txt  main.c
src/animations/random/: CMakeLists.txt  main.c
src/animations/ripple/: CMakeLists.txt  main.c
src/animations/snake/: main.c
src/animations/wave/: CMakeLists.txt  main.c
src/ckb/: CMakeLists.txt  CkbNext.plist  CkbNext.plist.in  Info.plist.in  animadddialog.cpp  animadddialog.h  animadddialog.ui  animscript.cpp  animscript.h  animsettingdialog.cpp  animsettingdialog.h  animsettingdialog.ui  autorun.cpp  autorun.h  binary.qrc  ckb-anim.h  ckb-info.plist  ckb-logo.icns  ckb-next-key.gpg  ckb-next.desktop  ckb-next.plist  ckb-next.plist.in  ckb.desktop  ckb.pro  ckbsettings.cpp  ckbsettings.h  ckbsettingswriter.cpp  colorbutton.cpp  colorbutton.h  colormap.h  daemondialog.cpp  daemondialog.h  daemondialog.ui  demoprofile.conf  extrasettingswidget.cpp  extrasettingswidget.h  extrasettingswidget.ui  fwupgradedialog.cpp  fwupgradedialog.h  fwupgradedialog.ui  (+87 more)
src/ckb-daemon/: CMakeLists.txt  Doxyfile  JustUSBfiles  ckb-daemon.pro  ckb-next-daemon.plist  command.c  command.h  device.c  device.h  device_keyboard.c  device_mouse.c  device_vtable.c  devnode.c  devnode.h  dpi.c  dpi.h  extra_mac.c  extra_mac.m  firmware.c  firmware.h  includes.h  input.c  input.h  input_linux.c  input_mac.c  input_mac_mouse.c  io.c  io.h  keyboard.c  keyboard.h  keyboard_de.c  keyboard_es.c  keyboard_fr.c  keyboard_gb.c  keyboard_mac.h  keyboard_se.c  keyboard_uk.c  keyboard_us.c  keymap.c  keymap.h  (+21 more)
src/ckb-gradient/: CMakeLists.txt  ckb-gradient.pro  main.c
src/ckb-heat/: CMakeLists.txt  ckb-heat.pro  main.c
src/ckb-hist/: ckb-hist.pro  main.c
src/ckb-mviz/: CMakeLists.txt  ckb-mviz.pro  main.c
src/ckb-pinwheel/: CMakeLists.txt  ckb-pinwheel.pro  main.c
src/ckb-rain/: CMakeLists.txt  ckb-rain.pro  main.c
src/ckb-random/: CMakeLists.txt  ckb-random.pro  main.c
src/ckb-ripple/: CMakeLists.txt  ckb-ripple.pro  main.c
src/ckb-wave/: CMakeLists.txt  ckb-wave.pro  main.c
src/ckb/lastinstall/: CMakeLists.txt
src/ckb/quazip/: CMakeLists.txt  JlCompress.cpp  JlCompress.h  qioapi.cpp  quaziodevice.h  quazipfile.cpp  zip.c
src/daemon/: CMakeLists.txt  bragi_common.c  bragi_common.h  bragi_notification.c  bragi_notification.h  bragi_proto.h  bragi_proto.h.orig  ckb-daemon.pro  ckb-next-daemon.plist.in  command.c  command.h  device.c  device.h  device_bragi.c  device_bragi.c.orig  device_keyboard.c  device_laptop.c  device_laptop.h  device_lightning_node.c  device_mouse.c  device_void.c  device_vtable.c  devnode.c  devnode.h  devnode_common.c  devnode_common.h  devnode_unix.c  devnode_windows.c  dpi.c  dpi.h  dpi_bragi.c  dpi_bragi.h  dpi_legacy.c  dpi_legacy.h  extra_mac.c  firmware.c  firmware.h  hid.json  includes.h  input.c  (+63 more)
src/dev-detect/: CMakeLists.txt
src/gui/: CMakeLists.txt  animadddialog.cpp  animadddialog.h  animadddialog.ui  animdetailsdialog.cpp  animdetailsdialog.h  animdetailsdialog.ui  animscript.cpp  animscript.h  animsettingdialog.cpp  animsettingdialog.h  animsettingdialog.ui  autorun.cpp  batterysystemtrayicon.cpp  batterysystemtrayicon.h  ckb-next.plist.in  ckb.desktop  ckbmainbackgroundcolour.cpp  ckbmainbackgroundcolour.h  ckbsettings.cpp  ckbsettings.h  ckbsettingswriter.cpp  ckbsettingswriter.h  ckbsystemquirks.cpp  ckbsystemquirks.h  ckbsystemtrayicon.cpp  ckbsystemtrayicon.h  ckbupdater.cpp  ckbupdater.h  ckbupdaterwidget.cpp  ckbupdaterwidget.h  ckbupdaterwidget.ui  ckbversionnumber.cpp  ckbversionnumber.h  clickeventpushbutton.cpp  clickeventpushbutton.h  colorbutton.cpp  colorbutton.h  colormap.cpp  colormap.h  (+121 more)
src/gui/compat/: qoverloadlegacy.h  qrand.h
src/gui/kstatusnotifier/: config-kstatusnotifieritem.h  debug_p.h  kstatusnotifieritem.cpp  kstatusnotifieritem.h  kstatusnotifieritemdbus_p.cpp  kstatusnotifieritemdbus_p.h  kstatusnotifieritemprivate_p.h  org.freedesktop.Notifications.xml  org.kde.StatusNotifierItem.xml
src/gui/kstatusnotifier/libdbusmenu-qt/: com.canonical.dbusmenu.xml  dbusmenu_p.cpp  dbusmenu_p.h  dbusmenuexporter.cpp  dbusmenuexporter.h  dbusmenuexporterdbus_p.cpp  dbusmenuexporterdbus_p.h  dbusmenuexporterprivate_p.h  dbusmenushortcut_p.cpp  dbusmenushortcut_p.h  dbusmenutypes_p.cpp  dbusmenutypes_p.h  (+3 more)
src/gui/quazip/: CMakeLists.txt  quazip.cpp
src/gui/resources/: ckb-next-key.gpg  demoprofile.conf  demoprofile_m95.ini
src/gui/tests/: CMakeLists.txt  TestQImageICC.cpp  TestQImageICC.h
src/gui/wayland/: waylandidletimer.cpp  waylandidletimer.h  waylandutils.cpp  waylandutils.h
src/gui/xcb/: xcbidletimer.cpp  xcbidletimer.h  xwindowdetector.cpp  xwindowdetector.h  xwindowinfo.h
src/libs/: CMakeLists.txt
src/libs/ckb-next/: CMakeLists.txt
src/libs/ckbnext/: CMakeLists.txt
src/libs/kissfft/: CMakeLists.txt
src/libs/quazip/: CMakeLists.txt  JlCompress.cpp  qioapi.cpp  quaadler32.cpp  quacrc32.cpp  quaziodevice.cpp  quaziodevice.h  quazip.cpp  quazip.h  quazipdir.cpp  quazipfile.cpp  quazipnewinfo.cpp  quazipnewinfo.h  unzip.c  unzip.h  zip.c  zip.h
src/mac-uninstall/: CMakeLists.txt
src/sinfo/: CMakeLists.txt  sinfo.cpp
(+178 files in other folders)
